<resources>
    <string name="app_name">Durare</string>
    <string name="default_web_client_id">975598957627-eskfiukf0kj475nafdv2pp70vrdn96tn.apps.googleusercontent.com</string>
    <string name="status_ready">Ready to detect push-ups</string>
    <string name="resting">Resting Time</string>
    <string name="status_go_up">Go up!</string>
    <string name="status_great">Great! Go down for next rep</string>
    <string name="status_ready_pushup">Ready for push-up</string>
    <string name="status_move_closer">Move closer to camera</string>
    <string name="status_no_face">No face detected</string>
    <string name="status_camera_permission">Camera permission required</string>
    <string name="face_size_format">Face: %d%%</string>
    <string name="settings">settings</string>
    <string name="ask_ai_bar_hint">Ask Anything</string>
    <string name="ask_ai">ask ai</string>
    <string name="person_name_1">Davian Allen</string>
    <string name="person_name_2">Isaac Osborne</string>
    <string name="person_name_3">Tobias Huber</string>
    <string name="score_1">12,523</string>
    <string name="score_2">4,607</string>
    <string name="score_3">3,245</string>
    <string name="current_streak_text">current - 11</string>
    <string name="highest_streak_text">highest - 26</string>
    <string name="current_streak_number">11</string>
    <string name="this_month">last 30 days</string>
    <string name="this_week">last 7 days</string>
    <string name="so_far">so far</string>
    <string name="leaderboard">leaderboard</string>
    <string name="global_push_ups">global push-ups</string>
    <string name="global_push_ups_count">240,846</string>
    <string name="start">Start</string>
    <string name="total_push_ups_today">total push-ups\ntoday</string>
    <string name="total_push_ups_today_count">46</string>
    <string name="this_week_count">125</string>
    <string name="this_month_count">525</string>
    <string name="so_far_count">2.54k</string>
    <string name="finish">Finish</string>
    <string name="play_pause">Play/Pause</string>
    <string name="reset">Reset</string>
    <string name="timer">Timer</string>
    <string name="timer_sample_duration">00:00</string>
    <string name="_0">0</string>
    <string name="rep_1">Rep 1</string>
    <string name="face_0">Face: 0%</string>
    <string name="back">Back</string>
    <string name="rate_us">Rate us</string>
    <string name="share_app">Share app</string>
    <string name="export_stats">Export stats</string>
    <string name="person_email_1">davianallen1997@yahoo.com</string>
    <string name="general">General</string>
    <string name="account_information">Account Information</string>
    <string name="personalize">Personalize</string>
    <string name="appearance">Appearance</string>
    <string name="notifications">Notifications</string>
    <string name="support">Support</string>
    <string name="report_an_issue">Report an issue</string>
    <string name="contact_us">Contact us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="logout">logout</string>
    <string name="personalize1">personalize</string>
    <string name="show_camera_card">Show camera card</string>
    <string name="a_camera_preview_to_just_n_make_sure_your_pushups_nare_getting_counted_correctly">A camera preview to just\n“make sure” your pushups\nare getting counted correctly.</string>
    <string name="turn_this_on_to_get_vibration_feedback_on_each_push_up_counts">Turn this “On” to get vibration feedback on each push-up counts</string>
    <string name="turn_this_on_to_get_sound_feedback_on_each_push_up_counts">Turn this “On” to get beep sound feedback on each push-up counts</string>
    <string name="vibration_feedback">Vibration feedback</string>
    <string name="sound_feedback">Sound feedback</string>
    <string name="total">Total</string>
    <string name="notifications1">notifications</string>
    <string name="all_notifications">All notifications</string>
    <string name="turn_this_on_to_receive_all_types_of_notifications">Turn this “On” to receive all types of notifications</string>
    <string name="version_x_x_x_x">Version - x.x.x(x)</string>
    <string name="appearance1">appearance</string>
    <string name="choose_a_theme">Choose a theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="account_information1">account information</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="analytics">analytics</string>
    <string name="home">Home</string>
    <string name="daily_records">daily records</string>
    <string name="current_month_stats">current month stats</string>
    <string name="push_up_counts_days_of_the_month"><font color="#FF690C"><b>↑</b></font> push-up counts &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; <font color="#FF690C"><b>→</b></font> days of the month</string>
    <string name="down_threshold_title">Lower Position Sensitivity</string>
    <string name="down_threshold_value">40</string>
    <string name="down_threshold_desc">Increase if push-ups are counted too early. Decrease if it’s not detecting your ‘down’ position even when you’re close.</string>
    <string name="up_threshold_title">Upper Position Sensitivity</string>
    <string name="up_threshold_value">25</string>
    <string name="up_threshold_desc">Increase if new push-ups aren’t counted after going up. Decrease if it counts too quickly before you finish moving up.</string>
    <string name="onboarding_title_1">track your push-ups.\nanytime. anywhere.</string>
    <string name="onboarding_body_1">Build strength and consistency with a\nsmart push-up counter designed to\nkeep you motivated.</string>
    <string name="onboarding_title_2">stay consistent.\nsmash your goals.</string>
    <string name="onboarding_body_2">Daily tracking, streaks, and monthly\nstats help you stay accountable\nand crush your fitness journey.</string>
    <string name="onboarding_title_3">you vs\nthe world.</string>
    <string name="onboarding_body_3">Compete with friends, climb the\nleaderboard, and join a\nglobal push-up movement.</string>
    <string name="onboarding_title_4">ready to\nbegin?</string>
    <string name="onboarding_body_4">Sign in with Google to save your\nprogress and join the community.</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="setup_workout">Setup Workout</string>
    <string name="total_reps">Total Reps</string>
    <string name="enter_total_reps">Enter total reps</string>
    <string name="rest_time">Rest Time</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="cancel">Cancel</string>
    <string name="start_workout">Start Workout</string>
    <string name="please_enter_total_reps">Please enter total reps</string>
    <string name="please_enter_valid_reps">Please enter a valid number of reps</string>
    <string name="tap_on_the_number_on_the_right_to_set_the_default_number_of_reps_count">Tap on the number on the right to set the default number of reps count</string>
    <string name="tap_on_the_number_on_the_right_to_set_the_default_rest_time_after_each_rep">Tap on the number on the right to set the default rest time after each rep</string>
    <string name="apply">Apply</string>
    <string name="separator">:</string>
    <string name="dismiss_dialog_box">Dismiss dialog box</string>
    <string name="push_ups">Push Ups</string>
    <string name="time">Time</string>
    <string name="_0m_0s">0m 0s</string>
    <string name="rest">Rest</string>
    <string name="transparent">Transparent</string>
    <string name="how_to_use">How to use?</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="save">Save</string>
    <string name="current">current - %1$s</string>
    <string name="highest">highest - %1$s</string>
    <string name="rankSampleText">You are at #-</string>
    <string name="almost_there">Almost there</string>
    <string name="hyphen">-</string>
    <string name="you_are_at_rank">You are at #%1$d</string>
    <string name="leaderboard1">Leaderboard</string>
    <string name="this_tracks_your_face_nto_count_pushups">This tracks your face\nto count pushups.</string>
    <string name="skip_button_title">Skip for now</string>
    <string name="allow_camera_button_title">Allow Camera Access</string>
    <string name="camera_access_description">We use your camera to count pushups automatically.\nYour video is never saved or shared.</string>
    <string name="camera_access">Camera Access</string>
    <string name="this_app_requires_camera_access_to_function_properly">This app requires camera access to function properly.</string>
    <string name="camera_permission_needed">Camera Permission Needed</string>
    <string name="ok">OK</string>
    <string name="permission_required">Permission Required</string>
    <string name="camera_permission_has_been_permanently_denied_please_enable_it_in_app_settings">Camera permission has been permanently denied. Please enable it in app settings.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="exit_rest">Exit Rest</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="set_an_alarm_to_stay_consistent">Set an alarm to stay consistent</string>
    <string name="workout_reminder">workout reminder</string>
    <string name="enable_daily_reminder">Enable Daily Reminder</string>
    <string name="get_notified_at_your_preferred_time_to_start_your_pushups">Get notified at your preferred time to start your pushups.</string>
    <string name="activate">Activate</string>
    <string name="hours">Hours</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="notification_access">Notification Access</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="notification_access_description">We send gentle reminders to help you stay consistent and take timely breaks.\nEnable notifications to receive:\n• Daily pushup reminders\n• Rest time alerts during workouts\nYou can manage or turn them off anytime.</string>
    <string name="this_app_requires_notification_access_to_function_properly">This app requires notification access to function properly.</string>
    <string name="notification_permission_needed">Notification Permission Needed</string>
    <string name="notification_permission_has_been_permanently_denied_please_enable_it_in_app_settings">Notification permission has been permanently denied. Please enable it in app settings.</string>
    <string name="previous_conversations">conversations</string>
    <string name="send">Send</string>
    <string name="use_my_stats">📊 Use my stats</string>
    <string name="remember">🧠 Remember</string>
    <string name="listening">Listening…</string>
    <string name="go_ahead_i_m_listening">Go ahead, I’m listening!</string>
    <string name="processing_your_speech">Processing your speech…</string>
    <string name="got_it">Got it!</string>
    <string name="reset_to_defaults">Reset to defaults</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_you_want_to_reset_to_default_values">Are you sure you want to reset to default values?</string>
    <string name="email_subject_contact">DurareApp: Assistance Needed</string>
</resources>