<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.cameraAccess.CameraAccessFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="311dp"
        android:layout_marginStart="32dp"
        android:importantForAccessibility="no"
        android:src="@drawable/camera_access_image"
        app:layout_constraintBottom_toTopOf="@+id/onboardingTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-36dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/show_camera_card"
        android:src="@drawable/show_camera_card_arrow"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/special_gothic_regular"
        android:text="@string/this_tracks_your_face_nto_count_pushups"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/onboardingTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/special_gothic_expanded_bold"
        android:text="@string/camera_access"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/onboardingBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/onboardingBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/special_gothic_regular"
        android:text="@string/camera_access_description"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/allowButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/allowButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/special_gothic_semibold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/allow_camera_button_title"
        android:textColor="@color/white"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/skipButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/skipButton"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/special_gothic_semibold"
        android:text="@string/skip_button_title"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@android:color/transparent" />

</androidx.constraintlayout.widget.ConstraintLayout>