<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    app:cardElevation="0dp"
    app:cardCornerRadius="24dp"
    app:cardBackgroundColor="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_permission_needed"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/special_gothic_semiexpanded_semibold" />

        <TextView
            android:id="@+id/dialogMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/this_app_requires_camera_access_to_function_properly"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/special_gothic_semiexpanded_regular" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:id="@+id/dialogCancel"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/special_gothic_semiexpanded_semibold"
                android:text="@string/cancel"
                android:textColor="@color/grey"
                app:rippleColor="@android:color/transparent" />

            <Button
                android:id="@+id/dialogOk"
                style="@style/Widget.Material3.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:fontFamily="@font/special_gothic_semiexpanded_semibold"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/primary"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>