<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:padding="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.shareStats.HorizontalStatsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginEnd="12dp"
            android:importantForAccessibility="no"
            android:src="@drawable/push_up_character"
            app:tint="@color/primary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/special_gothic_expanded_bold"
                android:text="@string/push_ups"
                android:textColor="@color/white_fix"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/pushUpCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:fontFamily="@font/special_gothic_expanded_bold"
                android:text="@string/_0"
                android:textColor="@color/white_fix"
                android:textSize="64sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/special_gothic_expanded_bold"
                android:text="@string/time"
                android:textColor="@color/white_fix"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/totalTimeCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/special_gothic_expanded_bold"
                android:text="@string/_0m_0s"
                android:textColor="@color/white_fix"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="36dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/special_gothic_expanded_bold"
                android:text="@string/rest"
                android:textColor="@color/white_fix"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/restTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/special_gothic_expanded_bold"
                android:text="@string/_0m_0s"
                android:textColor="@color/white_fix"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>